#+link:    compat-srht https://todo.sr.ht/~pkal/compat/
#+link:    compat-gh   https://github.com/emacs-compat/compat/issues/
#+options: toc:nil num:nil author:nil

* Development

- compat-30: Add extended function =sort= with keyword arguments.
- compat-30: New function =value<=.
- compat-30: Add extended =copy-tree= with support for copying records with
  non-nil optional second argument.
- compat-30: New macro =static-if=.
- compat-30: New alias =drop=.
- compat-30: New function =merge-ordered-lists=.
- compat-30: New variables =completion-lazy-hilit= and =completion-lazy-hilit-fn=
  and new function =completion-lazy-hilit=.
- compat-30: New function =require-with-check=.
- compat-30: New functions =find-buffer= and =get-truename-buffer=.
- compat-30: Add extended =completion-metadata-get= with support for
  =completion-category-overrides= and =completion-extra-properties=.

* Release of "Compat" Version 29.1.4.5

- Minor optimization of ~plist-get~ and ~plist-put~.
- Minor compatibility adjustments for the Emacs 30 development version.
- A minimal version of =compat.el= will be part of Emacs 30. Emacs :core packages
  can directly ~(require 'compat)~ without the ~NOERROR~ flag. Furthermore Compat
  will not be installed unnecessarily. If a package depending on Emacs 25.1 and
  Compat 29.1 is installed on Emacs 30.1, Compat 29.1 will not be installed from
  ELPA, since Emacs 30.1 already provides the required functionality.

(Release <2024-03-16 Sat>)

* Release of "Compat" Version 29.1.4.4

- Fix ~Package-Requires~ header in compat.el
- Fix ~Maintainer~ header in compat.el

(Release <2023-11-13 Mon>)

* Release of "Compat" Version 29.1.4.3

- compat-29: Add function =char-uppercase-p=.
- compat-29: Add function =window-configuration-equal-p=.

(Release <2023-11-04 Sat>)

* Release of "Compat" Version 29.1.4.2

- compat-28: Improve =make-separator-line= visuals on graphic displays.
- compat-28: Add =native-comp-available-p=, which always returns nil.